--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -50,13 +50,14 @@ pipelines:
             - npm
             - cypress
           #  - docker
-          image: coolnumber9/node-ionic-angular:nov2020-v1.0.2
+          #image: coolnumber9/node-ionic-angular:nov2020-v1.0.2
           #services:
           #  - docker
           #size: 2x
-          #image: cypress/base:10
+          image: cypress/base:10
           script:
             - echo "Building Artifacts..."
+            - npm install -g @ionic/cli
             #- npm ci
             - npm install
             - ionic build --prod
