--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,32 +9,40 @@ pipelines:
   branches:
     '{dev_branch,develop}':
       - step:
-          name: Code Linting
-          script: 
-            - echo "Code linting to be added soon..."
-      - step:
           name: Build and E2E Tests
           caches:
             - npm
-            - cypress
+            - node
           image: cypress/base:10
           script:
             - npm install -g @angular/cli
             - npm install -g @ionic/cli
             - npm install -g wait-on
             - npm ci
-            - ng run app:serve --host=localhost --port=8100 & wait-on http://localhost:8100
-            - npx cypress run --record --key $DPP_CYPRESS_RECORD_KEY
           artifacts:
-            - node_modules/** # Save modules for next steps
-            # - cypress/screenshots/**
-            # - cypress/reports/**
-            # - cypress/videos/**          
+            - node_modules/** # Save modules for next steps 
       - step:
-          name: Build PWA Artifacts
+          name: Code Linting
+          script: 
+            - echo "Code linting to be added soon..."
+      - step:
+          name: E2E Tests
           caches:
             - npm
             - cypress
+          image: cypress/base:10
+          script:
+            - ng run app:serve --host=localhost --port=8100 & wait-on http://localhost:8100
+            - npx cypress run --record --key $DPP_CYPRESS_RECORD_KEY
+          artifacts:
+            # - cypress/screenshots/**
+            # - cypress/reports/**
+            # - cypress/videos/**
+      - step:
+          name: Build PWA Artifacts
+          #caches:
+          #  - npm
+          #  - cypress
           #  - docker
           # image: coolnumber9/node-ionic-angular:nov2020-v1.0.2
           # services:
