--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,17 @@ pipelines:
   branches:
     '{dev_branch,develop}':
       - step:
+          name: Code linting
+          script:
+            - echo "Code linting to be added soon..."
+          #   - npm install eslint
+          #   - npx eslint .
+          #   - npx eslint --format=checkstyle -o checkstyle-result.xml *.js
+          # after-script:
+          #   - pipe: atlassian/checkstyle-report:0.2.0
+          # caches:
+          #   - node
+      - step:
           name: Build and E2E Tests
           caches:
             - npm
@@ -30,9 +41,74 @@ pipelines:
             # - cypress/reports/**
             # - cypress/videos/**
       - step:
-          name: Code Linting
-          script: 
+          name: Deploy to Test Env
+          deployment: test
+          script:
+            - pipe: atlassian/sftp-deploy:0.5.6
+              variables:
+                USER: $DPP_USER
+                SERVER: $DPP_SERVER
+                REMOTE_PATH: $DPP_REMOTE_PATH_STAGING
+                LOCAL_PATH: $DPP_LOCAL_PATH
+                PASSWORD: $DPP_PASSWORD
+                # DELETE_FLAG: 'false' # Don't delete existing files
+                # EXTRA_ARGS: "--exclude=.bitbucket/ --exclude=.git/ --exclude=bitbucket-pipelines.yml --exclude=.gitignore" # Ignore these
+    master:
+      - step:
+          name: Code linting
+          script:
             - echo "Code linting to be added soon..."
+          #   - npm install eslint
+          #   - npx eslint .
+          #   - npx eslint --format=checkstyle -o checkstyle-result.xml *.js
+          # after-script:
+          #   - pipe: atlassian/checkstyle-report:0.2.0
+          # caches:
+          #   - node
+      - step:
+          name: Build and E2E Tests
+          caches:
+            - npm
+            - node
+            - cypress
+          image: cypress/base:10
+          script:
+            - npm install -g @angular/cli
+            - npm install -g @ionic/cli
+            - npm install -g wait-on
+            - npm ci
+            - ng run app:serve --host=localhost --port=8100 & wait-on http://localhost:8100
+            - npx cypress run --record --key $DPP_CYPRESS_RECORD_KEY
+            - ionic build --prod
+          artifacts:
+            - node_modules/** # Save modules for next steps 
+            - www/**
+            # - cypress/screenshots/**
+            # - cypress/reports/**
+            # - cypress/videos/**
+      - step:
+          name: Deploy to Production
+          deployment: production
+          script:
+            - pipe: atlassian/sftp-deploy:0.5.6
+              variables:
+                USER: $DPP_USER
+                SERVER: $DPP_SERVER
+                REMOTE_PATH: $DPP_REMOTE_PATH_PROD
+                LOCAL_PATH: $DPP_LOCAL_PATH
+                PASSWORD: $DPP_PASSWORD
+                # DELETE_FLAG: 'false' # Don't delete existing files
+                # EXTRA_ARGS: "--exclude=.bitbucket/ --exclude=.git/ --exclude=bitbucket-pipelines.yml --exclude=.gitignore" # Ignore these
+
+definitions:
+  caches:
+    npm: $HOME/.npm
+    cypress: $HOME/.cache/Cypress
+  services:
+    docker:
+      memory: 4096
+
+
       # - step:
       #     name: Build PWA Artifacts
       #     #caches:
@@ -57,24 +133,4 @@ pipelines:
       #     #    - cypress/videos/**
       #     artifacts:
       #       - www/**
-      - step:
-          name: Deploy to Test Env
-          deployment: test
-          script:
-            - pipe: atlassian/sftp-deploy:0.5.6
-              variables:
-                USER: $DPP_USER
-                SERVER: $DPP_SERVER
-                REMOTE_PATH: $DPP_REMOTE_PATH
-                LOCAL_PATH: $DPP_LOCAL_PATH
-                PASSWORD: $DPP_PASSWORD
-                # DELETE_FLAG: 'false' # Don't delete existing files
-                # EXTRA_ARGS: "--exclude=.bitbucket/ --exclude=.git/ --exclude=bitbucket-pipelines.yml --exclude=.gitignore" # Ignore these
 
-definitions:
-  caches:
-    npm: $HOME/.npm
-    cypress: $HOME/.cache/Cypress
-  services:
-    docker:
-      memory: 4096
