--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -44,15 +44,23 @@ pipelines:
           name: Deploy to Test Env
           deployment: test
           script:
-            - pipe: atlassian/sftp-deploy:0.5.6
+            # - pipe: atlassian/sftp-deploy:0.5.6
+            #   variables:
+            #     USER: $DPP_USER
+            #     SERVER: $DPP_SERVER
+            #     REMOTE_PATH: $DPP_REMOTE_PATH_STAGING
+            #     LOCAL_PATH: $DPP_LOCAL_PATH
+            #     PASSWORD: $DPP_PASSWORD
+            #     # DELETE_FLAG: 'false' # Don't delete existing files
+            #     # EXTRA_ARGS: "--exclude=.bitbucket/ --exclude=.git/ --exclude=bitbucket-pipelines.yml --exclude=.gitignore" # Ignore these
+            
+            - pipe: atlassian/scp-deploy:0.3.13
               variables:
                 USER: $DPP_USER
                 SERVER: $DPP_SERVER
                 REMOTE_PATH: $DPP_REMOTE_PATH_STAGING
                 LOCAL_PATH: $DPP_LOCAL_PATH
-                PASSWORD: $DPP_PASSWORD
-                # DELETE_FLAG: 'false' # Don't delete existing files
-                # EXTRA_ARGS: "--exclude=.bitbucket/ --exclude=.git/ --exclude=bitbucket-pipelines.yml --exclude=.gitignore" # Ignore these
+
     master:
       - step:
           name: Code linting
