--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,7 +12,9 @@ e2e: &e2e
     - node
     - cypress
   script:
-    #- npm ci
+    - npm install -g @angular/cli
+    - npm install -g @ionic/cli
+    - npm install -g wait-on
     - ng run app:serve --host=localhost --port=8100 & wait-on http://localhost:8100
     - npx cypress run --record --key $DPP_CYPRESS_RECORD_KEY --parallel
   artifacts:
