Add 2 more machines for parallelization of Cypress tests.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -61,7 +61,10 @@ pipelines:
             <<: *e2e
         - step:
             <<: *e2e
-
+        - step:
+            <<: *e2e
+        - step:
+            <<: *e2e
             # - ng run app:serve --host=localhost --port=8100 & wait-on http://localhost:8100
             # - npx cypress run --record --key $DPP_CYPRESS_RECORD_KEY
             # - ionic build --prod
